@@ -211,71 +211,129 @@ void lsx_generate_wave_table(
  * # of samples.
  * Returns NULL on error, pointer to next char to parse otherwise.
  */
-char const * lsx_parsesamples(sox_rate_t rate, const char *str, size_t *samples, int def)
+char const * lsx_parsesamples(sox_rate_t rate, const char *str0, size_t *samples, int def)
 {
-    int found_samples = 0, found_time = 0;
-    int time = 0;
-    long long_samples;
-    float frac = 0;
-    char const * end;
-    char const * pos;
-    sox_bool found_colon, found_dot;
+  int i, found_samples = 0, found_time = 0;
+  char const * end;
+  char const * pos;
+  sox_bool found_colon, found_dot;
+  char * str = (char *)str0;
 
-    for (end = str; *end && strchr("0123456789:.ts", *end); ++end);
-    if (end == str)
-      return NULL;
-
-    pos = strchr(str, ':');
-    found_colon = pos && pos < end;
-
-    pos = strchr(str, '.');
-    found_dot = pos && pos < end;
-
-    if (found_colon || found_dot || *(end-1) == 't')
-        found_time = 1;
-    else if (*(end-1) == 's')
-        found_samples = 1;
-
-    if (found_time || (def == 't' && !found_samples))
-    {
-        *samples = 0;
-
-        while(1)
-        {
-            if (str[0] != '.' && sscanf(str, "%d", &time) != 1)
-                return NULL;
-            *samples += time;
-
-            while (*str != ':' && *str != '.' && *str != 0)
-                str++;
-
-            if (*str == '.' || *str == 0)
-                break;
-
-            /* Skip past ':' */
-            str++;
-            *samples *= 60;
-        }
-
-        if (*str == '.')
-        {
-            if (sscanf(str, "%f", &frac) != 1)
-                return NULL;
-        }
-
-        *samples *= rate;
-        *samples += (rate * frac) + 0.5;
-        return end;
-    }
-    if (found_samples || (def == 's' && !found_time))
-    {
-        if (sscanf(str, "%ld", &long_samples) != 1)
-            return NULL;
-        *samples = long_samples;
-        return end;
-    }
+  for (;*str == ' '; ++str);
+  for (end = str; *end && strchr("0123456789:.ets", *end); ++end);
+  if (end == str)
     return NULL;
+
+  pos = strchr(str, ':');
+  found_colon = pos && pos < end;
+
+  pos = strchr(str, '.');
+  found_dot = pos && pos < end;
+
+  if (found_colon || found_dot || *(end-1) == 't')
+    found_time = 1;
+  else if (*(end-1) == 's')
+    found_samples = 1;
+
+  if (found_time || (def == 't' && !found_samples)) {
+    for (*samples = 0, i = 0; *str != '.' && i < 3; ++i) {
+      char * last_str = str;
+      long part = strtol(str, &str, 10);
+      if (!i && str == last_str)
+        return NULL;
+      *samples += rate * part;
+      if (i < 2) {
+        if (*str != ':')
+          break;
+        ++str;
+        *samples *= 60;
+      }
+    }
+    if (*str == '.') {
+      char * last_str = str;
+      double part = strtod(str, &str);
+      if (str == last_str)
+        return NULL;
+      *samples += rate * part + .5;
+    }
+    return *str == 't'? str + 1 : str;
+  }
+  {
+    char * last_str = str;
+    double part = strtod(str, &str);
+    if (str == last_str)
+      return NULL;
+    *samples = part + .5;
+    return *str == 's'? str + 1 : str;
+  }
 }
+
+#if 0
+
+#define TEST(st, samp, len) \
+  str = st; \
+  next = lsx_parsesamples(10000, str, &samples, 't'); \
+  assert(samples == samp && next == str + len);
+
+int main(int argc, char * * argv)
+{
+  char const * str, * next;
+  size_t samples;
+
+  TEST("0"  , 0, 1)
+  TEST("1" , 10000, 1)
+
+  TEST("0s" , 0, 2)
+  TEST("0s,", 0, 2)
+  TEST("0s/", 0, 2)
+  TEST("0s@", 0, 2)
+
+  TEST("0t" , 0, 2)
+  TEST("0t,", 0, 2)
+  TEST("0t/", 0, 2)
+  TEST("0t@", 0, 2)
+
+  TEST("1s" , 1, 2)
+  TEST("1s,", 1, 2)
+  TEST("1s/", 1, 2)
+  TEST("1s@", 1, 2)
+  TEST(" 01s" , 1, 4)
+  TEST("1e6s" , 1000000, 4)
+
+  TEST("1t" , 10000, 2)
+  TEST("1t,", 10000, 2)
+  TEST("1t/", 10000, 2)
+  TEST("1t@", 10000, 2)
+  TEST("1.1t" , 11000, 4)
+  TEST("1.1t,", 11000, 4)
+  TEST("1.1t/", 11000, 4)
+  TEST("1.1t@", 11000, 4)
+  TEST("1e6t" , 10000, 1)
+
+  TEST(".0", 0, 2)
+  TEST("0.0", 0, 3)
+  TEST("0:0.0", 0, 5)
+  TEST("0:0:0.0", 0, 7)
+
+  TEST(".1", 1000, 2)
+  TEST(".10", 1000, 3)
+  TEST("0.1", 1000, 3)
+  TEST("1.1", 11000, 3)
+  TEST("1:1.1", 611000, 5)
+  TEST("1:1:1.1", 36611000, 7)
+  TEST("1:1", 610000, 3)
+  TEST("1:01", 610000, 4)
+  TEST("1:1:1", 36610000, 5)
+  TEST("1:", 600000, 2)
+  TEST("1::", 36000000, 3)
+
+  TEST("0.444444", 4444, 8)
+  TEST("0.555555", 5556, 8)
+
+  assert(!lsx_parsesamples(10000, "x", &samples, 't'));
+  return 0;
+}
+#endif 
 
 /* a note is given as an int,
  * 0   => 440 Hz = A
